--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/viewpager": "^4.2.4",
+    "@react-native-firebase/app": "^11.2.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
@@ -29,6 +30,7 @@
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-fast-image": "^8.3.4",
     "react-native-flash-message": "^0.1.22",
+    "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
