--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/viewpager": "^4.2.4",
     "@react-native-firebase/app": "^11.2.0",
+    "@react-native-firebase/messaging": "^11.2.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
