--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@react-native-community/viewpager": "^4.2.4",
     "@react-native-firebase/app": "^11.2.0",
     "@react-native-firebase/messaging": "^11.2.0",
+    "@react-native-google-signin/google-signin": "^6.0.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "axios": "^0.21.1",
+    "d3-shape": "^2.1.0",
     "is_js": "^0.9.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
@@ -30,6 +33,7 @@
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-fast-image": "^8.3.4",
+    "react-native-fbsdk": "^3.0.0",
     "react-native-flash-message": "^0.1.22",
     "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.10.1",
@@ -38,6 +42,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localization": "^2.1.6",
     "react-native-modal": "^11.7.0",
+    "react-native-paper": "^4.7.2",
     "react-native-ratings": "^7.4.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
@@ -46,6 +51,8 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-star-rating": "^1.1.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
